# da14531-hal

./: Cargo.toml  README.md
src/: adc.rs  clock.rs  crg_aon.rs  crg_top.rs  gpadc.rs  gpio.rs  i2c.rs  interrupt.rs  lib.rs  nvic.rs  otpc.rs  prelude.rs  sleep.rs  sys_wdog.rs  timer.rs  wakeup.rs  watchdog.rs  wkup.rs
src/gpadc/: config.rs
src/gpio/: convert.rs  erased.rs  partially_erased.rs
src/otpc/: config.rs
